Add: company domain model and application usecases